# aoc_2024

./: Cargo.toml
src/: lib.rs  main.rs  util.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs
