[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
counter = "0.6.0"
foldhash = "0.1.3"
glam = "0.29.2"
itertools = "0.13.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
rayon = "1.10.0"
regex = "1.11.1"
rstest = "0.23.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
